Fri May 27 15:55:00 BST 2005 (njh)
----------------------------------
  * clamav-milter:	When loading a new database when not in external mode,
				keep scanning with the old one rather than
				hold up incoming mails while waiting for
				clamav-milter to become idle then reloading the
				database

Thu May 26 04:03:31 CEST 2005 (tk)
----------------------------------
  * clamd/scanner.c: quick recovery of thread resources when clamd clients
		     abandon stream connection requests (patch by Mark
		     Pizzolato <clamav-devel*subscriptions.pizzolato.net>)

Thu May 26 03:20:44 CEST 2005 (tk)
----------------------------------
  * libclamav/others.c: print warnings and errors in single call to write
			(thanks to Denis Vlasenko <vda*ilport.com.ua>)

Wed May 25 20:41:40 BST 2005 (njh)
----------------------------------
  * clamav-milter:	When not in external mode, TEMPFAIL when loading a new
				database, even when --dont-wait isn't given

Tue May 24 22:24:08 CEST 2005 (tk)
----------------------------------
  * clamscan/others.c: enable REG_EXTENDED in match_regex

Mon May 23 00:00:22 CEST 2005 (tk)
----------------------------------
  * libclamav/others.c: improve temporary name generation

Sat May 21 23:06:03 BST 2005 (njh)
----------------------------------
  * libclamav/pdf.c:	Added decoder for ascii85 encoded files

Sat May 21 02:17:08 CEST 2005 (tk)
----------------------------------
  * Remove the use of tmpfile(). Patch by Mark Pizzolato
    <clamav-devel@subscriptions.pizzolato.net>, full list of changes:

  * libclamav/others.c
    - in cli_gentempname call cli_rndnum with 256 instead of 255 to get the
      full range of possible byte values
    - new functions: cli_gentempdir, cli_gentempdesc, and cli_gentempstream
      which generate the appropriate type of object (and return its name)
    - fix bug in memory error path of cli_gentemp (now cli_gentempname)
      which printed the wrong (possibly null) value for the directory name
